--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-EMAIL_ADDRESS = djsnss2025@gmail.com
-EMAIL_PASSWORD = @Djsnss_25
+EMAIL_ADDRESS = "djnss.official@gmail.com"
+EMAIL_PASSWORD = "egrj vnpi twfj iltr"
